# python_embed

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: conda.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: Makefile  cmake_example.rst  conf.py  index.rst  make.bat
scripts/: assemble_application.py  generate_frozen_modules.py  generate_source_zip.py  python_config.py
src/: main.cpp
src/python_embed/: __main__.py
tests/: test_basic.py
